--- a/angular.json
+++ b/angular.json
@@ -23,17 +23,25 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
-              "node_modules/owl.carousel/dist/assets/owl.theme.default.min.css"
+              "src/assets/css/owl.carousel.css",
+              "src/assets/css/owl.transitions.css",
+              "src/assets/css/owl.theme.default.min.css",
+              "node_modules/angular-bootstrap-md/scss/bootstrap/bootstrap.scss",
+              "node_modules/angular-bootstrap-md/scss/mdb-free.scss",
+              "src/assets/css/amazonmenu.css"
+
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js", 
+              "src/assets/js/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/owl.carousel/dist/owl.carousel.min.js"
+              "src/assets/js/owl.carousel.js",
+              "src/assets/js/custom.js",
+              "src/assets/js/amazonmenu.js"
             ]
           },
           "configurations": {
@@ -91,12 +99,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "/.node_modules/bootstrap/dist/cs/bootstrap.min.css"
-              
-              
             ],
-            "scripts": [
-              
-            ],
+            "scripts": [],
             "assets": [
               "src/favicon.ico",
               "src/assets"
