--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^8.10.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
