--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
+    "ngx-pagination": "^3.2.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "sweetalert2": "^8.10.2",
