--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "~7.1.0",
     "angular-bootstrap-md": "^7.4.4",
     "angular-font-awesome": "^3.1.2",
+    "angular-froala-wysiwyg": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
     "datatables.net-bs4": "^1.10.19",
     "font-awesome": "^4.7.0",
+    "froala-editor": "^3.0.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "magnific-popup": "^1.1.0",
